# factory-website

./: deploy.sh  index.html
Projects/chain-of-thoughts/: pubspec.yaml
Projects/chain-of-thoughts/lib/: main.dart
Projects/chain-of-thoughts/test/: widget_test.dart
Projects/fikr/: firebase.json  firestore.rules  pubspec.yaml
Projects/project-xtara/: .cursorrules  .gitignore  README.md  matchingLogic.md  notebook.md  package.json  prompts.md  user_profile_schema_firestore.json
Projects/saveaday-factory/: README.md  package.json  projects.json  start.sh  tsconfig.json
Projects/xrome/: QUICKSTART.md  README.md  build.py  dev.sh  hot_reload.py  pyproject.toml  requirements.txt  requirements_kivy.txt  run.py  show_icons.py  start.bat  start.sh  test_install.py
Projects/xrome/app/: __init__.py  main.py
Projects/xrome/app/assets/styles/: chrome_style.qss
Projects/xrome/app/browser/: __init__.py  view.py
Projects/xrome/app/core/: config.py  icons.py  llm.py  state.py
Projects/xrome/app/tools/: accessibility.py  analytics.py  runner.py  usability.py
Projects/xrome/app/ui/: main_window.py
Projects/xrome/app/ui/widgets/: chat_panel.py  chat_panel_new.py  chat_panel_old.py  chat_webview.py  features_grid.py  features_modal.py  footer.py  header.py  left_sidebar.py  settings_dialog.py  sidebar.py  tools_menu.py
Projects/xrome/pyside_browser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Projects/xrome/tests/: test_extract.py  test_llm.py  test_tools.py
assets/: index-BWa6Cewj.js  index-bQp74SFc.css
src/app/: globals.css
src/lib/: sso.ts
(+202 files in other folders)
