[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[project]
name = "pyside-browser"
version = "0.1.0"
dependencies = [
  "PySide6",
  "httpx>=0.27",
  "playwright>=1.46",
  "sqlmodel>=0.0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

